# spark-nlp-workshop

./: .gitattributes  .gitignore  13.1.Finetuning_Sentence_Entity_Resolver_Model.ipynb  Dockerfile  ISSUE_TEMPLATE.md  README.md  build.sbt  colab_setup.py  colab_setup.sh  jsl_colab_setup.sh  jsl_colab_setup_with_OCR.sh  jsl_sagemaker_setup.sh  jsl_sagemaker_setup_3.0.1.sh  jsl_sagemaker_setup_with_OCR.sh  jupyter_notebook_config.json  ocr_colab_setup.sh  patterns.json  requirements.txt
Spark_NLP_Udemy_MOOC/: download_notebooks.py  links.xlsx
agents/mcp_servers/deidentification/deid-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  spark_jsl.json.example
agents/mcp_servers/deidentification/deid-service/src/: __init__.py  config.py  server.py
agents/mcp_servers/deidentification/jsl-deid-mcp-server-v1/: Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  test_server.py  test_server.sh
agents/mcp_servers/deidentification/jsl-deid-mcp-server-v1/examples/: langchain_example.py  mcp_client_example.py  mcp_sdk_example.py
agents/mcp_servers/deidentification/jsl-deid-mcp-server-v1/src/: __init__.py  config.py  pipeline.py  server.py
agents/mcp_servers/deidentification/jsl-deid-mcp-server-v2/: README.md  pyproject.toml
agents/mcp_servers/deidentification/jsl-deid-mcp-server-v2/src/: __init__.py  config.py  server.py
binder/: Dockerfile
databricks/: Getting Started.html  README.md  Spark NLP - Databricks.dbc  benchmark.md  index.html
docker/: Dockerfile
finance-nlp/: 01.Page_Splitting.ipynb  02.Sentence_Splitting_Tokenization.ipynb  03.Word_Sentence_Embeddings.ipynb  04.0.Document_Paragraph_Classification.ipynb  04.1.Training_Financial_Binary_Classifier.ipynb  04.2.Training_Financial_Multiclass_Classifier.ipynb  04.3.Training_Financial_Multilabel_Classifier.ipynb  05.0.NER_and_ZeroShotNER.ipynb  05.1.Training_Financial_NER.ipynb  05.2.Financial_NER_Additional_Examples.ipynb  05.3.ZeroShot_Financial_NER.ipynb  05.4.BertForTokenClassification_TrainEval.ipynb  05.5.BertForTokenClassification_TrainAndSave.ipynb  05.6.Contextual_Parser_Rule_Based_NER.ipynb  06.0.Relation_Extraction.ipynb  06.1.Additional_Relation_Extraction_Examples.ipynb  06.2.ZeroShot_Relation_Extraction.ipynb  06.3.Relation_Extraction_Training.ipynb  07.0.Understand_Entities_in_Context.ipynb  07.1.Training_Financial_Assertion.ipynb  08.0.Answering_Questions_Financial_Texts.ipynb  08.1.Automatic_Question_Generation_Financial_Texts.ipynb  08.2.Table_Question_Answering.ipynb  10.2.Chunk_Mappers_Training.ipynb  (+29 more)
(+6769 files in other folders)
