[project]
name = "jsl-deid-mcp-server-v1"
version = "0.1.0"
description = "MCP server for clinical text deidentification using Spark NLP Healthcare"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "John Snow Labs", email = "support@johnsnowlabs.com" }
]

dependencies = [
    "mcp>=1.0.0",
    "pyspark==3.4.1",
    "spark-nlp==6.2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Note: spark-nlp-jsl requires JSL PyPI index:
# uv pip install spark-nlp-jsl==6.2.0 --extra-index-url https://pypi.johnsnowlabs.com/${SECRET}
