[project]
name = "jsl-deid-mcp-server-v2"
version = "2.0.0"
description = "Lightweight MCP server for clinical text deidentification via deid-service API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "John Snow Labs", email = "support@johnsnowlabs.com" }
]

# Minimal dependencies - no Spark, no heavy ML libraries
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
